2006-07-26  Matthias Clasen  <mclasen@redhat.com>

	* libgnomeui/gnome-icon-list.c (icon_list_append): Re-add
	some not quite dead code to make GnomeIconList work again.

2006-07-24  Fernando Herrera  <fernando.herrera-de-las-heras@nokia.com>

	* NEWS:
	* configure.in: Release 2.15.90

2006-07-24  Fernando Herrera  <fernando.herrera-de-las-heras@nokia.com>

	* libgnomeui/gnome_segv.c: (main): Removed the crashing dialog.
	If GNOME_HACKER env variable is set, launch a gnome-terminal with
	gdb attached to the crashing proccess, if not, just launch bug-buddy.

2006-07-10  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-ui-init.c: (libgnomeui_segv_handle):
	Add missing XUngrabServer() call here. Closes bug #129930

2006-07-10  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-client.c: (master_client_connect):
	Fix bug #90345. Remove unneeded atexit() call.
	(Owen Taylor)

2006-06-20  Christian Persch  <chpe@cvs.gnome.org>

	* libgnomeui/gnome-ui-init.c: (show_url), (about_url_hook),
	(about_email_hook), (libgnomeui_private_free),
	(libgnomeui_get_property), (libgnomeui_set_property),
	(libgnomeui_class_init), (libgnomeui_post_args_parse),
	(libgnomeui_arg_callback): Set about dialogue hooks. Fixes bug
	#337358.

2006-05-27  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-icon-entry.c: (update_icon), (entry_activated),
	(setup_preview), (entry_changed): Fix critical warnings.
	(Travis Watkins). Should close bug #341111. Also remove some
	unneeded casts.

2006-05-16  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in: Update intltool requirement to 0.35.

2006-05-05  Travis Watkins  <alleykat@gmail.com>

	* libgnomeui/gnome-icon-entry.c: Autoupdate icon list on dir change
	and remove preview widget.
	* libgnomeui/gnome-file-entry.c: Filter out regular files when using
	with directory-entry.
	Closes bug #340478.

2006-05-02  Kristian Rietveld  <kris@imendio.com>

	Merge of the asynchronous file chooser branch.  Please see the